add stories to vizpres

--- a/default.html
+++ b/default.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VizStudio Presentation demo</title>
   <link  rel="stylesheet" type="text/css" href="css/vizstudio.css"/>
-  <link  rel="stylesheet" type="text/css" href="css/vizstudio_prez.css"/>
-  <link  rel="stylesheet" type="text/css" href="css/vizstudio_prez.css"/>
+  <link  rel="stylesheet" type="text/css" href="css/vizprez.css"/>
+  <link  rel="stylesheet" type="text/css" href="css/vizprez.css"/>
   <!-- custom css for the clocks scene -->
   <link  rel="stylesheet" type="text/css" href="css/demo/clock.css"/>
 </head>
