--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VizStudio Presentation</title>
   <link rel="stylesheet" type="text/css" href="css/vizstudio.css"/>
-  <link rel="stylesheet" type="text/css" href="css/vizstudio_prez.css"/>
+  <link rel="stylesheet" type="text/css" href="css/vizprez.css"/>
 
   <!-- LOAD YOUR CUSTOM CSS HERE, e.g.:
     <link  rel="stylesheet" type="text/css" href="css/my.css"/>
