--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VizStudio Presentation</title>
-  <link rel="stylesheet" type="text/css" href="css/vizstudio.css"/>
-  <link rel="stylesheet" type="text/css" href="css/vizprez.css"/>
+  <title>Visualization Gallery Presentation</title>
+  <link rel="stylesheet" type="text/css" href="css/visualization_gallery.css"/>
+  <link rel="stylesheet" type="text/css" href="css/vispres.css"/>
 
   <!-- LOAD YOUR CUSTOM CSS HERE, e.g.:
     <link  rel="stylesheet" type="text/css" href="css/my.css"/>
@@ -15,12 +15,10 @@
 
 <body>
 
-  <!-- #vizprez is the container for all visible elements -->
-  <div id="vizprez" class="vizstudio">
-    <!-- these 2 are twins that alternately load scenes to enable crossfades -->
-    <div class="zone-wrapper to-fade-in" id="zone-wrapper-1"> </div>
-    <div class="zone-wrapper to-fade-in" id="zone-wrapper-2"> </div>
-  </div>
+  <!-- DO NOT EDIT THIS SECTION -->
+  <!-- #vispres is parent elment for all visible content -->
+  <div id="vispres" class="visualization-gallery"></div>
+  <!-- END -- DO NOT EDIT THIS SECTION -->
 
   <!-- #audio contains audio elements when needed; not visible -->
   <div id="audio"></div>
@@ -30,14 +28,14 @@
   -->
 
   <!-- load core presentation javascript -->
-  <script type="text/javascript" src="js/vizstudio_utils.js"></script>
+  <script type="text/javascript" src="js/vispres_utils.js"></script>
   <script type="text/javascript" src="js/config.js"></script>
-  <script type="text/javascript" src="js/vizprez.js"></script>
+  <script type="text/javascript" src="js/vispres.js"></script>
   <script type="text/javascript" src="js/transform_scale.js"></script>
 
   <!-- initialize the presentation -->
   <script>
-    new VizPrez('#vizprez', config());
+    new VisPres('#VisPres', config());
   </script>
 
 </body>
