--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   -->
 
   <!-- load core presentation javascript -->
-  <script type="text/javascript" src="js/vispres_utils.js"></script>
+  <script type="text/javascript" src="js/utils.js"></script>
   <script type="text/javascript" src="js/config.js"></script>
   <script type="text/javascript" src="js/vispres.js"></script>
   <script type="text/javascript" src="js/transform_scale.js"></script>
